oxker-tui/tests/snapshots/ui_regression_tests__basic_block.snap
---
source: oxker-tui/tests/ui_regression_tests.rs
expression: output
---
┌Test──────────────┐
│                  │
│                  │
│                  │
└──────────────────┘
