oxker-tui/tests/snapshots/ui_regression_tests__error_panel_regression@multiline_error.snap
---
source: oxker-tui/tests/ui_regression_tests.rs
expression: output
---
               ╭──────────────────── Error ────────────────────╮                
               │                                               │                
               │   IO error with: Failed to start container:   │                
               │          - Port 8080 is already in use        │                
               │              - Volume mount failed            │                
               │                                               │                
               │            ( c | esc ) clear error            │                
               │                                               │                
               │                ( q ) quit oxker               │                
               │                                               │                
               ╰───────────────────────────────────────────────╯
