oxker-tui/tests/snapshots/ui_regression_tests__error_panel_regression@permission_error.snap
---
source: oxker-tui/tests/ui_regression_tests.rs
expression: output
---
                                                                                
         ╭────────────────────────── Error ───────────────────────────╮         
         │                                                            │         
         │   IO error with: Permission denied: /var/run/docker.sock   │         
         │                                                            │         
         │                   ( c | esc ) clear error                  │         
         │                                                            │         
         │                       ( q ) quit oxker                     │         
         │                                                            │         
         ╰────────────────────────────────────────────────────────────╯
