oxker-tui/tests/snapshots/ui_regression_tests__error_panel_regression@simple_error.snap
---
source: oxker-tui/tests/ui_regression_tests.rs
expression: output
---
                                                                                
                   ╭──────────────── Error ─────────────────╮                   
                   │                                        │                   
                   │   IO error with: Container not found   │                   
                   │                                        │                   
                   │         ( c | esc ) clear error        │                   
                   │                                        │                   
                   │             ( q ) quit oxker           │                   
                   │                                        │                   
                   ╰────────────────────────────────────────╯
