oxker-tui/tests/snapshots/ui_regression_tests__filter_panel_regression@image_filter.snap
---
source: oxker-tui/tests/ui_regression_tests.rs
expression: output
---
 Esc  clear  ← by →   All  Name  Image  Status  term: alpine
