oxker-tui/tests/snapshots/ui_regression_tests__ui_structure_filter.snap
---
source: oxker-tui/tests/ui_regression_tests.rs
expression: output
---
 Esc  clear  ← by →   Name  Image  Status  All  term: test
